tests/snapshots/yaml_suite_snapshots__yaml_suite_Q9WF_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "? first: Sammy\n  last: Sosa\n: hr: 65\n  avg: 0.278\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2780989"
  name: Spec Example 6.12. Separation Spaces
  tags: complex-key flow spec comment whitespace 1.3-err
  tree: "+STR\n +DOC\n  +MAP\n   +MAP {}\n    =VAL :first\n    =VAL :Sammy\n    =VAL :last\n    =VAL :Sosa\n   -MAP\n   +MAP\n    =VAL :hr\n    =VAL :65\n    =VAL :avg\n    =VAL :0.278\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "{ first: Sammy, last: Sosa }:\n# Statistics:\n  hr:  # Home runs\n     65\n  avg: # Average\n   0.278\n"
