tests/snapshots/yaml_suite_snapshots__yaml_suite_QB6E_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Wrong indented multiline quoted scalar
  from: "@perlpunk"
  tags: double error indent
  fail: true
  yaml: "---\nquoted: \"a\nb\nc\"\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :quoted\n"
