tests/snapshots/yaml_suite_snapshots__yaml_suite_QB6E_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indented multiline quoted scalar
  tags: double error indent
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :quoted\n"
  yaml: "---\nquoted: \"a\nb\nc\"\n"
